    into a directory in PATH as an alternative installation method, and will
    use readlink to find where the build was unpacked.
  * Include man pages in Linux and OSX standalone builds.
  * Linux standalone build now includes its own glibc and forces the linker to
    use it, to remove dependence on the host glibc.
  * assistant: Always batch changes found in startup scan.

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Dec 2013 13:32:49 -0400

git-annex (5.20131213) unstable; urgency=low

  * Avoid using git commit in direct mode, since in some situations
    it will read the full contents of files in the tree.
  * assistant: Batch jobs are now run with ionice and nocache, when
    those commands are available.
  * assistant: Run transferkeys as batch jobs.
  * Automatically fix up bad bare repositories created by
    versions 5.20131118 through 5.20131127.
  * rsync special remote: Fix fallback mode for rsync remotes that
    use hashDirMixed. Closes: #731142
  * copy --from, get --from: When --force is used, ignore the
    location log and always try to get the file from the remote.
  * Deal with box.com changing the url of their webdav endpoint.
  * Android: Fix SRV record lookups for XMPP to use android getprop
    command to find DNS server, since there is no resolv.conf.
  * import: Add --skip-duplicates option.
  * lock: Require --force. Closes: #731606
  * import: better handling of overwriting an existing file/directory/broken
    link when importing
  * Windows: assistant and webapp work! (very experimental)
  * Windows: Support annex.diskreserve.
  * Fix bad behavior in Firefox, which was caused by an earlier fix to
    bad behavior in Chromium.
  * repair: Improve repair of git-annex index file.
  * repair: Remove damaged git-annex sync branches.
  * status: Ignore new files that are gitignored.
  * Fix direct mode's handling when modifications to non-annexed files
    are pulled from a remote. A bug prevented the files from being updated